--- a/kivy_interface/kvfile.kv
+++ b/kivy_interface/kvfile.kv
@@ -8,75 +8,119 @@
     font_size: 22
 
 <SpinnerOption>:
-    #size_hint: None, None
     background_color: (1,1,1,1)
-    height: 20
+    height: 25
+
+<CredentialPopup>:
+    size_hint_y: 0.25
+    size_hint_x: 0.95
+    title: "confirm"
+    title_align: "right"
+    Label:
+        font_size: 24
+        text: "[color=#88e5af][b]Credential correctly send[/b][/color]"
+        markup: True 
+
 
 <MainBox>:
-    orientation: "horizontal"
-
+    orientation: "vertical"
+    
+    
+    ################################
+    # sezione send network credential
+    ################################
+    
     BoxLayout:
         padding: [25,25,25,25]
-        spacing: 10
+        spacing: 5
         font_size: 24
+        size_hint_y: 0.5
         orientation: "vertical"
+
         MyLabel:
-            size_hint_y: 0.05
-            text: self.format_text("Network Config")
-            #font_size: 24
+            size_hint_y: 0.2
+            text: self.format_text("NETWORK CONFIG")
             markup: True
         
         BoxLayout:
             orientation: "horizontal"
-            size_hint_y: 0.1
+            size_hint_y: 0.2
             MyLabel:
+                font_size: 20
                 text: "SSID"
                 markup: True 
-                size_hint_x: 0.25
-                #size_hint_y: 1
+                size_hint_x: 0.3
             Spinner:
                 id: spinner_id
                 background_color: (1,1,1,1) 
-                size_hint_x: 1
-                text: 'Home'
+                size_hint_x: 0.7
+                text: 'network name'
                 values: app.networks
-                #on_value:
-                    #print: "The spinner"
                 on_text: root.spinner_clicked(spinner_id.text)
 
         BoxLayout:
             orientation: "horizontal"
-            size_hint_y: 0.1
+            size_hint_y: 0.2
             MyLabel:
+                font_size: 20
                 text: "Password"
                 markup: True 
-                size_hint_x: 0.25
+                size_hint_x: 0.3
             TextInput:
                 id: pass_field
                 font_size: 20
+                multiline: False
+                password: True
                 color: [1,0,0,1]
-                size_hint_x: 0.75
+                size_hint_x: 0.7
+                padding_x: 10
+                padding_y: [self.height / 2.0 - (self.line_height / 2.0) * len(self._lines), 0]
                 on_text: root.print_pwd(pass_field.text)
+                background_color: 0.75,0.75,0.75,1
 
         MyButton:
-            size_hint_y: 0.5
+            size_hint_y: 0.4
             text: "send"
             on_press: root.credential_send()
-    
+            #on_release: root.fire_popup()
+
+
+    ################################
+    # sezione upgrade system
+    ################################
+
     BoxLayout:
-        orientation: "vertical"
-        spacing: 25
-        padding: [25,25,25,25]
+        size_hint_y: 0.25
+        #orientation: "vertical"
+        font_size: 24
+        padding: 25,25,25,25
+        spacing: 5
         MyButton:
-            text: "Update system"
+            text: "[color=#88e5af][b]Update system[/b][/color]"
             font_size: 24
             markup: True
-            size_hint_y: 0.4
+
+
+    ################################
+    # sezione upload patch
+    ################################
+
+    BoxLayout:
+        size_hint_y: 0.25
+        orientation: "horizontal"
+        padding: 25,25,25,25
+        spacing: 5
+        MyLabel:
+            size_hint_x: 0.4
+            text: self.format_text("PureData")
+            markup: True
         BoxLayout:
             orientation: "vertical"
-            font_size: 48
-            size_hint_y: 0.6
             MyButton:
-                text: "CHOOSE A PATCH"
+                font_size: 14
+                text: "[b]CHOOSE A PATCH[/b]"
+                markup: True
             MyButton:
-                text: "UPLOAD PATCH"
+                font_size: 14
+                text: "[b]UPLOAD PATCH[/b]"
+                markup: True
