--- a/kivy_interface/kvfile.kv
+++ b/kivy_interface/kvfile.kv
@@ -12,13 +12,14 @@
     height: 25
 
 <CredentialPopup>:
-    size_hint_y: 0.25
+    size_hint_y: 0.5
     size_hint_x: 0.95
     title: "confirm"
     title_align: "right"
     Label:
-        font_size: 24
-        text: "[color=#88e5af][b]Credential correctly send[/b][/color]"
+        halign: 'center'
+        font_size: 32
+        text: "[color=#88e5af][b]Credential correctly send.\nReboot the rock[/b][/color]"
         markup: True 
 
 
@@ -99,6 +100,7 @@
             text: "[color=#88e5af][b]Update system[/b][/color]"
             font_size: 24
             markup: True
+            on_press: root.system_update()
 
 
     ################################
