add bash scripts for connections

--- a/kivy_interface/kvfile.kv
+++ b/kivy_interface/kvfile.kv
@@ -45,45 +45,52 @@
         
         BoxLayout:
             orientation: "horizontal"
-            size_hint_y: 0.2
-            MyLabel:
-                font_size: 20
-                text: "SSID"
-                markup: True 
-                size_hint_x: 0.3
-            Spinner:
-                id: spinner_id
-                background_color: (1,1,1,1) 
-                size_hint_x: 0.7
-                text: 'network name'
-                values: app.networks
-                on_text: root.spinner_clicked(spinner_id.text)
+            padding: [25,25,25,25]
+            spacing: 5
 
-        BoxLayout:
-            orientation: "horizontal"
-            size_hint_y: 0.2
-            MyLabel:
-                font_size: 20
-                text: "Password"
-                markup: True 
-                size_hint_x: 0.3
-            TextInput:
-                id: pass_field
-                font_size: 20
-                multiline: False
-                password: True
-                color: [1,0,0,1]
-                size_hint_x: 0.7
-                padding_x: 10
-                padding_y: [self.height / 2.0 - (self.line_height / 2.0) * len(self._lines), 0]
-                on_text: root.print_pwd(pass_field.text)
-                background_color: 0.75,0.75,0.75,1
+            BoxLayout:
+                orientation: "vertical"
+                BoxLayout:
+                    orientation: "horizontal"
+                    size_hint_y: 0.2
+                    MyLabel:
+                        font_size: 20
+                        text: "SSID"
+                        markup: True 
+                        size_hint_x: 0.3
+                    Spinner:
+                        id: spinner_id
+                        background_color: (1,1,1,1) 
+                        size_hint_x: 0.7
+                        text: 'network name'
+                        values: app.networks
+                        on_text: root.spinner_clicked(spinner_id.text)
 
-        MyButton:
-            size_hint_y: 0.4
-            text: "send"
-            on_press: root.credential_send()
-            #on_release: root.fire_popup()
+                BoxLayout:
+                    orientation: "horizontal"
+                    size_hint_y: 0.2
+                    MyLabel:
+                        font_size: 20
+                        text: "Password"
+                        markup: True 
+                        size_hint_x: 0.3
+                    TextInput:
+                        id: pass_field
+                        font_size: 20
+                        multiline: False
+                        password: True
+                        color: [1,0,0,1]
+                        size_hint_x: 0.7
+                        padding_x: 10
+                        padding_y: [self.height / 2.0 - (self.line_height / 2.0) * len(self._lines), 0]
+                        on_text: root.print_pwd(pass_field.text)
+                        background_color: 0.75,0.75,0.75,1
+
+            MyButton:
+                size_hint_x: 0.25
+                text: "send"
+                on_press: root.credential_send()
+                #on_release: root.fire_popup()
 
 
     ################################
