--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -3,5 +3,5 @@ title: false
 styles: true
 ---
 
-$codeBackgroundColour: #aaaaaa !default;
+$codeBackgroundColour: #cacaca !default;
 @import "alembic";
