--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -4,4 +4,10 @@ styles: true
 ---
 
 $codeBackgroundColour: #cacaca !default;
+$headingtype: (
+    font-family: '"Verdana", Sans-serif',
+    regular: 400,
+    bold: 700,
+    cap-height: 0.75,
+) !default;
 @import "alembic";
