--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -5,7 +5,7 @@ styles: true
 
 $codeBackgroundColour: #cacaca !default;
 $headingtype: (
-    font-family: '"Verdana", Sans-serif',
+    font-family: '"Verdana", sans-serif',
     regular: 400,
     bold: 700,
     cap-height: 0.75,
