--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,10 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+.inner {
+    font-size: 20px;
+}
+
 #project_tagline {
     font-size: 32px;
 }
